# DevOpsLab3

./: CMakeLists.txt  Dockerfile  FuncCosh  FuncCosh.cpp  FuncCosh.h  HTTP_server.cpp  HTTPserver.cpp  Makefile  Makefile.am  Makefile.in  TestFuncCosh.cpp  TestHTTPserver.cpp  UnitTest.cpp  calculateTime.cpp  calculateTime.h  config.status  configure  configure.ac  configure~  debian.deb  func  func.cpp  func.h  libtool  main.cpp  scriptA.sh  scriptB.sh  test_func.cpp  test_func_cosh
.deps/: FuncCosh.Po  HTTPserver.Po  UnitTest.Po  calculateTime.Po  main.Po  test_func.Po
.github/workflows/: automake.yml  ci.yml  dep_package.yml  test.yml
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
debian/DEBIAN/: control
