AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = FuncCosh
check_PROGRAMS = test_func_cosh
test_func_cosh_SOURCES = UnitTest.cpp FuncCosh.cpp FuncCosh.h calculateTime.cpp calculateTime.h

TESTS = test_func_cosh
FuncCosh_SOURCES = main.cpp FuncCosh.cpp FuncCosh.h HTTPserver.cpp calculateTime.cpp calculateTime.h
EXTRA_DIST = Makefile.am
